--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "directories": {
     "test": "test"
   },
-  "main": "MopRpc.js",
+  "main": "mop-rpc.js",
   "scripts": {
     "test": "mocha"
   },
